[package]
name = "audrey2"
version = "0.1.2"
edition = "2021"
description = "A scriptable feed aggregator with a queryable local SQLite store."
license = "MIT"
repository = "https://github.com/blockhackersio/audrey2"
readme = "README.md"
keywords = ["rss", "atom", "feed", "cli", "aggregator"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
feed-rs = "2.3.1"
reqwest = { version = "0.13.3", features = ["blocking"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.149"
 
[profile.release]
lto = true
strip = true
